{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 114,
  "lineage": "a93a5e8a-3c56-ba49-8f25-46fa17a39567",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "extraction_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:241533149472:transit-gateway-attachment/tgw-attach-0c4944ffc5cd3549d",
            "dns_support": "enable",
            "id": "tgw-attach-0c4944ffc5cd3549d",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0066e4a2401572f92",
              "subnet-053c309fb38e97d22"
            ],
            "tags": {
              "Name": "extraction-production-tgw-attachment"
            },
            "tags_all": {
              "Name": "extraction-production-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_id": "vpc-07ee72d4edc099ba2",
            "vpc_owner_id": "241533149472"
          },
          "dependencies": [
            "aws_subnet.sn-tgw-core-1",
            "aws_subnet.sn-tgw-core-2",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0658e8e477bfd8b61",
            "arn": "arn:aws:ec2:us-east-1:241533149472:elastic-ip/eipalloc-0658e8e477bfd8b61",
            "association_id": "eipassoc-0273d84765cb73780",
            "domain": "vpc",
            "id": "eipalloc-0658e8e477bfd8b61",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd6452db49d88ac9",
            "private_dns": "ip-10-162-32-248.ec2.internal",
            "private_ip": "10.162.32.248",
            "public_dns": "ec2-52-205-110-182.compute-1.amazonaws.com",
            "public_ip": "52.205.110.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1-production"
            },
            "tags_all": {
              "Name": "nat-eip-1-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02325259ced53328d",
            "arn": "arn:aws:ec2:us-east-1:241533149472:elastic-ip/eipalloc-02325259ced53328d",
            "association_id": "eipassoc-080fffb32d87f76f9",
            "domain": "vpc",
            "id": "eipalloc-02325259ced53328d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d432a7f28a0286ec",
            "private_dns": "ip-10-162-48-254.ec2.internal",
            "private_ip": "10.162.48.254",
            "public_dns": "ec2-3-209-90-66.compute-1.amazonaws.com",
            "public_ip": "3.209.90.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2-production"
            },
            "tags_all": {
              "Name": "nat-eip-2-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "extraction_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:internet-gateway/igw-0ee3609e650b6f718",
            "id": "igw-0ee3609e650b6f718",
            "owner_id": "241533149472",
            "tags": {
              "Name": "extraction-igw-production"
            },
            "tags_all": {
              "Name": "extraction-igw-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0658e8e477bfd8b61",
            "association_id": "eipassoc-0273d84765cb73780",
            "connectivity_type": "public",
            "id": "nat-0dad474144b581562",
            "network_interface_id": "eni-0bd6452db49d88ac9",
            "private_ip": "10.162.32.248",
            "public_ip": "52.205.110.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0269e6db1024ae693",
            "tags": {
              "Name": "nat-gw-1-production"
            },
            "tags_all": {
              "Name": "nat-gw-1-production"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02325259ced53328d",
            "association_id": "eipassoc-080fffb32d87f76f9",
            "connectivity_type": "public",
            "id": "nat-0bb864de06c9d9898",
            "network_interface_id": "eni-0d432a7f28a0286ec",
            "private_ip": "10.162.48.254",
            "public_ip": "3.209.90.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c840675ce4e10f3a",
            "tags": {
              "Name": "nat-gw-2-production"
            },
            "tags_all": {
              "Name": "nat-gw-2-production"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-2",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c33bad769043d0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dad474144b581562",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c33bad769043d0b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.timescalert",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "timescalert_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.162.0.0/23",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c33bad769043d0b2084175025",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c33bad769043d0b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.timescalert",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "timescalert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:route-table/rtb-07c33bad769043d0b",
            "id": "rtb-07c33bad769043d0b",
            "owner_id": "241533149472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dad474144b581562",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "timescalert-production"
            },
            "tags_all": {
              "Name": "timescalert-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0ec5c6229aeeaf0b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.34.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec5c6229aeeaf0b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0b314f34b552344d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.50.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b314f34b552344d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-074ec8698dedc9826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.44.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074ec8698dedc9826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0f240c9288c81a8fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f240c9288c81a8fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-002b89535bbdecfb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.47.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b89535bbdecfb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-1-production"
            },
            "tags_all": {
              "Name": "sn-mwaa-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0cf412785cfa91741",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.63.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf412785cfa91741",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-2-production"
            },
            "tags_all": {
              "Name": "sn-mwaa-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0269e6db1024ae693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.32.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0269e6db1024ae693",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-1-production"
            },
            "tags_all": {
              "Name": "sn-ngw-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0c840675ce4e10f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.48.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c840675ce4e10f3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-2-production"
            },
            "tags_all": {
              "Name": "sn-ngw-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0b2c9be4a92d10432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.32.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2c9be4a92d10432",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-1-production"
            },
            "tags_all": {
              "Name": "sn-privatelink-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0ba6d64d0c835cffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.48.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba6d64d0c835cffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-2-production"
            },
            "tags_all": {
              "Name": "sn-privatelink-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0066e4a2401572f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.32.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0066e4a2401572f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-1-production"
            },
            "tags_all": {
              "Name": "sn-tgw-core-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-053c309fb38e97d22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.36.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c309fb38e97d22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-2-production"
            },
            "tags_all": {
              "Name": "sn-tgw-core-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0b59077ca14fdaad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.34.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b59077ca14fdaad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-1-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0f8dad037573ad3b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.50.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8dad037573ad3b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-2-production"
            },
            "vpc_id": "vpc-07ee72d4edc099ba2"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:vpc/vpc-07ee72d4edc099ba2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.32.0/19",
            "default_network_acl_id": "acl-030d37a4783d9766e",
            "default_route_table_id": "rtb-03f4f233f46ed52a8",
            "default_security_group_id": "sg-01a571cd28d1bafdc",
            "dhcp_options_id": "dopt-0c33a873375db2ae5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ee72d4edc099ba2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f4f233f46ed52a8",
            "owner_id": "241533149472",
            "tags": {
              "Name": "extraction-production"
            },
            "tags_all": {
              "Name": "extraction-production"
            }
          }
        }
      ]
    }
  ]
}